<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="337dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/logouisrael" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/Titulo" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="78dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="194dp"
        android:text="@string/Usuario"
        android:textColor="#0E0D0D"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:ems="10"
        android:hint="@string/User"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvContraesña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="284dp"
        android:text="@string/Pass"
        android:textColor="#040303"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etContraesña"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnValidar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:onClick="login"
        android:text="@string/Boton" />
</RelativeLayout>